--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./css/app.min.css" />
     <link
       rel="stylesheet"
-      href="https://unpkg.com/swiper@8/swiper-bundle.min.css"
+      href="/css/swiper-bundle.min.css"
     />
   </head>
 
@@ -27,8 +27,8 @@
     <header class="trassir-header">
       <div class="container">
         <div class="trassir-header__logo">
-          <img class="trassir-header__logo-main" loading="lazy" src="./images/dist/header/logo.svg" alt="logo" />
-          <img class="trassir-header__logo-menu" loading="lazy" src="./images/dist/header/logo-menu.svg" alt="logo-menu" />
+          <img class="trassir-header__logo-main" src="./images/dist/header/logo.svg" alt="logo" />
+          <img class="trassir-header__logo-menu" src="./images/dist/header/logo-menu.svg" alt="logo-menu" />
         </div>
         <nav>
           <ul>
@@ -543,8 +543,8 @@ Video Surveillance and access control <br> software</p>
     </div>
 </footer>
 
-<script type="module" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script type="module" src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-<script type="module" src="js/app.min.js"></script>
+<script src="js/jquery-3.6.0.min.js"></script>
+<script src="js/swiper-bundle.min.js"></script>
+<script src="js/app.min.js"></script>
 </body>
 </html>
