--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./css/app.min.css" />
     <link
       rel="preload"
+      as="style"
       href="./css/swiper-bundle.min.css"
       onload="this.rel='stylesheet'"
     />
