--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-
+  
     <link rel="icon" href="images/favicon.png" />
     <meta property="og:image" content="images/dist/preview.jpg" />
-
+    <meta name="google-site-verification" content="Po6jRiBfPy-PoCC6EiD3F3mJE1PrtP6xQ8R0QF95I2I" />
     <link rel="stylesheet" href="./css/app.min.css" />
     <link
       rel="preload"
