--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <!-- <base href="/"> -->
@@ -12,10 +12,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-  
+
     <link rel="icon" href="images/favicon.png" />
     <meta property="og:image" content="images/dist/preview.jpg" />
-    <meta name="google-site-verification" content="Po6jRiBfPy-PoCC6EiD3F3mJE1PrtP6xQ8R0QF95I2I" />
+
     <link rel="stylesheet" href="./css/app.min.css" />
     <link
       rel="preload"
@@ -545,8 +545,8 @@ Video Surveillance and access control <br> software</p>
     </div>
 </footer>
 
-<script src="js/jquery-3.6.0.min.js"></script>
-<script src="js/swiper-bundle.min.js"></script>
-<script src="js/app.min.js"></script>
+<script defer src="js/jquery-3.6.0.min.js"></script>
+<script defer src="js/swiper-bundle.min.js"></script>
+<script defer src="js/app.min.js"></script>
 </body>
 </html>
