--- a/company.html
+++ b/company.html
@@ -155,7 +155,7 @@
     <ul class="trassir-leaders__list">
       <li>
         <img
-          src="/images/dist/leaders/kfc.jpg"
+          src="images/dist/leaders/kfc.jpg"
           width="221"
           height="105"
           alt=""
@@ -163,7 +163,7 @@
       </li>
       <li>
         <img
-          src="/images/dist/leaders/macdonald.jpg"
+          src="images/dist/leaders/macdonald.jpg"
           width="120"
           height="92"
           alt=""
@@ -171,18 +171,18 @@
       </li>
       <li>
         <img
-          src="/images/dist/leaders/spar.jpg"
+          src="images/dist/leaders/spar.jpg"
           width="287"
           height="71"
           alt=""
         />
       </li>
       <li>
-        <img src="/images/dist/leaders/leroymerlin.jpg" width="160" alt="" />
+        <img src="images/dist/leaders/leroymerlin.jpg" width="160" alt="" />
       </li>
       <li>
         <img
-          src="/images/dist/leaders/auchan.jpg"
+          src="images/dist/leaders/auchan.jpg"
           width="238"
           height="71"
           alt=""
@@ -190,7 +190,7 @@
       </li>
       <li>
         <img
-          src="/images/dist/leaders/yandex.jpg"
+          src="images/dist/leaders/yandex.jpg"
           width="184"
           height="72"
           alt=""
@@ -198,7 +198,7 @@
       </li>
       <li>
         <img
-          src="/images/dist/leaders/renault.jpg"
+          src="images/dist/leaders/renault.jpg"
           width="330"
           height="72"
           alt=""
@@ -206,7 +206,7 @@
       </li>
       <li>
         <img
-          src="/images/dist/leaders/rosneft.jpg"
+          src="images/dist/leaders/rosneft.jpg"
           width="237"
           height="102"
           alt=""
