--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       style="background-image: url('./images/dist/banner-main.jpg')"
     >
       <div class="trassir-main__img-camera">
-        <img src="./images/dist/camera.svg" width="806" height="550" alt="camera" />
+        <img src="./images/dist/camera.png" width="806" height="550" alt="camera" />
       </div>
 
       <div class="container">
