--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <!-- <base href="/"> -->
 
-        <title>TrassirV2</title>
+        <title>Contact us</title>
         <meta name="description" content="Startup HTML template OptimizedHTML 5" />
 
         <meta
